--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style src="style.css"></style>
+    <title>Odin Etch</title>
+    <link rel="stylesheet"  href="style.css">
+    <script src="script.js" defer ></script>
+
 </head>
 <body>
+    <button class="reset">Reset Grid</button>
+
     <div class="container-1">
     <div class="container">
-        <button class="reset"></button>
+        
     </div>
     </div>
     
-    <script src="script.js"></script>
 </body>
 </html>
